<resources>
    <string name="app_name">TaskMyDay</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="eventName">Event Name</string>
    <string name="group">Group</string>
    <string name="birthDate">Birth date</string>
    <string name="nameDay">Name day</string>
    <string name="importantDate">Important Date</string>
    <string name="other">Other</string>
    <string name="syncable">Syncable</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="created">Created</string>
    <string name="dueDate">Due Date</string>
    <string name="priority">Priority</string>
    <string name="place">Place</string>
    <string name="form_hint">Click to set</string>
    <string name="group_prompt">Set a group</string>
    <string name="syncable_prompt">Do you want to sync this event</string>
    <string name="type_prompt">Set a type</string>
    <string name="priority_prompt">Set a priority</string>
    <string name="info">At the current moment \n
        You seem to have no active tasks \n
        to add them please click \n
        blue round button  \n
        at the bottom of the screen</string>
    <string-array name="group">
        <item>Only me</item>
        <item>Family</item>
        <item>For all</item>
    </string-array>
    <string-array name="syncable">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string-array name="type">
        <item>Meeting</item>
        <item>To do</item>
        <item>Other</item>
    </string-array>
    <string-array name="priority">
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
    </string-array>
</resources>
