<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:tag="user_view">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/userName"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/group"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/birthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/group"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/birthDate"
            android:inputType="date" />

        <EditText
            android:id="@+id/nameDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/birthDate"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/nameDay"
            android:inputType="date" />

        <EditText
            android:id="@+id/importantDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/nameDay"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/importantDate"
            android:inputType="date" />

        <EditText
            android:id="@+id/other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/importantDate"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/other"
            android:inputType="date" />
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"
        android:onClick="onClick"
        android:src="@android:drawable/ic_input_add"
        android:tint="#ffffff"
        app:backgroundTint="?attr/colorPrimary" />

</android.support.design.widget.CoordinatorLayout>